<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent">

        <ImageView
            android:id="@+id/imgList"
            android:layout_width="@dimen/_56sdp"
            android:layout_height="@dimen/_56sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_golf_cart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@id/imgList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgList"
            app:layout_constraintTop_toTopOf="@id/imgList">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4D92D2"
                android:padding="@dimen/_12sdp">


                <TextView
                    android:id="@+id/txt_name_product"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/price_EXAMPLE"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/txt_price"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_name_product" />

                <TextView
                    android:id="@+id/txt_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/price_EXAMPLE"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/text_name"
                    app:layout_constraintTop_toBottomOf="@id/txt_name_product" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>