<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.add.prodact.AddProductFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.28"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary">

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHeight_percent="0.7"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/img_my_profile"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_account"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHeight_percent="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintWidth_percent="0.25" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_4sdp"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/ic_camera"
                        app:backgroundTint="@color/colorBlueSky"
                        app:elevation="0dp"
                        app:fabSize="mini"
                        app:layout_anchor="@id/img_my_profile"
                        app:layout_anchorGravity="bottom|right" />

                </androidx.coordinatorlayout.widget.CoordinatorLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/product_name_TEXT"
            android:textColor="@color/colorBlackText"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardImage" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etNameLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/textName">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:hint="@string/product_name_HINT"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_14sdp" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textHarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/product_price_TEXT"
            android:textColor="@color/colorBlackText"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etNameLay" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etHargaLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/textHarga">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:hint="@string/product_price_HINT"
                android:inputType="number"
                android:textSize="@dimen/_14sdp" />


        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardSubmit"
            android:layout_width="0dp"
            android:layout_height="@dimen/_48sdp"
            android:background="@color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/transparent"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image"
                    android:src="@drawable/background_button_two_cor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:drawablePadding="@dimen/_8sdp"
                    android:text="@string/post_TEXT"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>